# geobook

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: main.yml
config/: .env.template
geobook/: app.py
geobook/apps/users/api/v1/: auth.py  user.py
geobook/apps/users/managers/: user.py
geobook/apps/users/models/: auth.py  user.py
geobook/apps/users/routers/: v1.py
geobook/apps/users/services/: auth.py  base.py  user.py
geobook/core/: __init__.py  exception_handler.py
geobook/db/backends/base/: __init__.py  client.py
geobook/db/backends/mongodb/: client.py  exceptions.py
geobook/db/backends/mongodb/models/: __init__.py  base.py
geobook/db/backends/mongodb/models/fields/: object_id.py
geobook/management/: base.py
geobook/management/commands/: check.py  create_user.py  runserver.py  shell.py
geobook/settings/: __init__.py  common.py  database.py  jwt.py  server.py
