[tool.poetry]
name = "geobook"
version = "0.0.1"
description = "The geospatial repository next generation."
authors = [
  "Aliaksandr Vaskevich <vaskevic.an@gmail.com>",
]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/gb-libs/geobook"
repository = "https://github.com/gb-libs/geobook"
documentation = "https://github.com/gb-libs/geobook"

keywords = [
  "geospatial",
  "gis",
  "geo",
  "json",
  "geojson",
  "rest",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
