[tool.poetry]
name = "geobook"
version = "0.0.1"
description = "The geospatial repository next generation."
authors = [
  "Aliaksandr Vaskevich <vaskevic.an@gmail.com>",
]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/gb-libs/geobook"
repository = "https://github.com/gb-libs/geobook"
documentation = "https://github.com/gb-libs/geobook"

keywords = [
  "geospatial",
  "gis",
  "geo",
  "json",
  "geojson",
  "rest",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: CPython",
  "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncio = "^3.4.3"
click = "^8.0.3"
PyJWT = "^2.3.0"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
pytest = "^7.1.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "hug"
src_paths = ["isort", "tests"]
